# kanban

./: Cargo.toml  LICENSE.md  README.md
internal_macros/: Cargo.toml
internal_macros/src/: lib.rs
resources/test/: example_board.yaml
src/: editor.rs  main.rs  utils.rs
src/adapters/: mod.rs
src/adapters/controllers/: cli.rs  mod.rs
src/adapters/editors/: mod.rs  os_default_editor.rs
src/adapters/presenters/: mod.rs  nil_presenter.rs  stdoutrenderer.rs
src/adapters/storages/: memory_issue_storage.rs  mod.rs  storage.rs
src/adapters/storages/file_storage/: mod.rs  serde_resources.rs  storage.rs
src/adapters/time_providers/: fake.rs  mod.rs  simple.rs
src/application/: mod.rs
src/application/domain/: board.rs  error.rs  historized_board.rs  history.rs  issue.rs  mod.rs  parse_date.rs
src/application/domain/date_parse/: chumsky.rs  error.rs  mod.rs  parse_date.rs  parser.rs
src/application/model/: mod.rs
src/application/ports/: editor.rs  issue_storage.rs  mod.rs  presenter.rs  time.rs
src/application/usecase/: add.rs  delete.rs  due.rs  edit.rs  flush.rs  get.rs  mod.rs  move.rs  prio.rs  test_utils.rs  tests_common.rs  undo.rs  usecase.rs  usecase_test.rs
src/cli/: mod.rs  root.rs
src/controllers/: mod.rs  root.rs
src/model/: board.rs  issue.rs  mod.rs
src/presenters/: mod.rs
src/render/: mod.rs  render.rs  stdout_redner.rs  stdoutrenderer.rs
src/storage/: mod.rs  storage.rs
src/usecase/: usecase.rs
