[package]
name = "kanban"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
serde = { version = "1.0",  features = ["derive"] }
serde_yaml = "0.8"
home = "0.5.3"
colored = "2.0.4"
tempfile = "3.4.0"
validated = "0.4.0"
nonempty-collections = "0.1.1"
thiserror = { version = "1.0.56", features = [] }
