[package]
name = "kanban"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
internal_macros = { path = "./internal_macros" }
clap = { version = "4.4.6", features = ["derive"] }
serde = { version = "1.0",  features = ["derive"] }
serde_yaml = "0.8"
home = "0.5.3"
colored = "2.0.4"
tempfile = "3.4.0"
nonempty-collections = "0.1.1"
thiserror = { version = "1.0.56", features = [] }
itertools = { version = "0.12.1", features = [] }
time = { version = "0.3.37", features = ["macros", "parsing", "serde-human-readable"] }

[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]


[dev-dependencies]
assert2 = "0.3.11"
